# book_shop

./: CMakeLists.txt  main.cpp
apps/: customer_app.cpp  customer_app.h  manager_app.cpp  manager_app.h  utils.cpp  utils.h
data/: books.txt  customers.txt  managers.txt  orders.txt
model/: Book.cpp  Book.h
model/Order/: Order.cpp  Order.h  OrderStatus.cpp  OrderStatus.h
model/People/: Customer.cpp  Customer.h  Human.cpp  Human.h  Manager.cpp  Manager.h  Rights.h
repositories/: BooksRepo.cpp  BooksRepo.h  CustomersRepo.cpp  CustomersRepo.h  ManagersRepo.cpp  ManagersRepo.h
